[build-system]
requires = [
  "setuptools >= 61.0", # PEP-621
  "setuptools_scm[toml] >= 7.0.0",
]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.8"
dynamic = ["version"]
name = "ansible-compat"
description = "Ansible compatibility goodies"
readme = "README.md"
authors = [{ "name" = "Sorin Sbarnea", "email" = "ssbarnea@redhat.com" }]
maintainers = [{ "name" = "Sorin Sbarnea", "email" = "ssbarnea@redhat.com" }]
license = { text = "MIT" }

[tool.setuptools_scm]
local_scheme = "no-local-version"
